<resources>
    <string name="app_name">MayMayMay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="days_list_fragment_name">DaysListFragment</string>
    <string name="day_info_fragment_name">DayInfoFragment</string>
    <string name="edit_day_fragment_name">EditDayFragment</string>
    <string name="new_day_fragment_name">NewDayFragment</string>
    <string name="date_placeholder">June 25, 2019</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="grade_placeholder">10</string>
    <string name="choose_date_button">Choose date</string>
    <string name="date_picker_title">What day do you want to write about?</string>
    <string name="description_label">What did you do on this day?</string>
    <string name="description_placeholder">Write just something</string>
    <string name="grade_picker_title">Estimate you day</string>
    <string name="add_day_button_title">Add day</string>
    <string name="description_empty_error">You should not leave description empty</string>
    <string name="description_title">You did</string>
    <string name="grade_title">Estimated as</string>
    <string name="date_not_chosen">Date not chosen</string>
    <string name="edit_day">Edit day</string>
    <string name="save_day">Save</string>
    <string name="smile_button">Smile</string>
    <string name="capture_button">Capture</string>
</resources>
